--- a/src/AppBundle/Resources/views/footer.html.twig
+++ b/src/AppBundle/Resources/views/footer.html.twig
@@ -2,39 +2,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-2" id="Footerleft">
+                <div class="col-xs-2" >
                     <h3>Help</h3>
                 </div>
-                <div class="col-xs-2" id="Footercenter">
+                <div class="col-xs-2" >
                     <h3>The games</h3>
                 </div>
-                <div class="col-xs-2" id="Footerright">
+                <div class="col-xs-2" >
                     <h3>About us</h3>
                 </div>
                 <div class="col-xs-3"></div>
             </div>
             <div class="row">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-2" id="Footerleft">
+                <div class="col-xs-2" >
                     <a>Can't place a bet?</a>
                 </div>
-                <div class="col-xs-2" id="Footercenter">
+                <div class="col-xs-2" >
                     <a href="http://dota2.gamepedia.com/Dota_2"><p>Dota 2</p></a>
                 </div>
-                <div class="col-xs-2" id="Footerright">
+                <div class="col-xs-2">
                     <a>Terms and conditions</a>
                 </div>
                 <div class="col-xs-3"></div>
             </div>
             <div class="row">
                 <div class="col-xs-3"></div>
-                <div class="col-xs-2" id="Footerleft">
+                <div class="col-xs-2">
                     <a>Can't redraw money?</a>
                 </div>
-                <div class="col-xs-2" id="Footercenter">
+                <div class="col-xs-2">
                     <a href="http://counterstrike.wikia.com/wiki/Counter-Strike:_Global_Offensive"><p>CS GO</p></a>
                 </div>
-                <div class="col-xs-2" id="Footerright">
+                <div class="col-xs-2">
                     <a>Contact us</a>
                 </div>
                 <div class="col-xs-3"></div>
