--- a/src/AppBundle/Resources/views/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/layoutBase.html.twig
@@ -3,7 +3,7 @@
     {% include '@App/top.html.twig' %}
 {% endblock %}
 {% block body %}
-    <div class="container">
+    <div class="container design">
         <div class="row">
             <div class="col-lg-3">
                 {% block left %}
