--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -24,6 +24,6 @@
         </div>
     </div>
     <div class="logo">
-        <a href="{{ path('index') }}"><img class="logos" src="{{ asset('bundles/app/img/logo-ebet.png') }}"/></a>
+        <a href="{{ path('index') }}"><img class="logos" alt="eBetLogo" src="{{ asset('bundles/app/img/logo-ebet.png') }}"/></a>
     </div>
 </div>
