--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -1,5 +1,13 @@
 body {
     height: 100%;
+    background-image: url("../img/bg.jpg");
+
+}
+h3 {
+    color: white;
+}
+.design {
+    background-color: #e3e3e3;
 }
 /*Footer*/
 .footer {
@@ -24,7 +32,7 @@ body {
 #topbar {
     color: white;
     text-decoration: none;"
-    margin: 10px;
+margin: 10px;
 }
 
 #topbar:hover {
@@ -43,8 +51,10 @@ body {
 /* Logo - midten af topbaren*/
 #ebet-top .logo {
     background: white;
+    border-top: 2px solid #993030;
+    border-bottom: 2px solid #993030;
 }
-img.logo {
+img.logos {
     display: block;
     margin-left: auto;
     margin-right: auto;
