Added a lot of stuff at Brians place

--- a/src/AppBundle/Resources/views/layout.html.twig
+++ b/src/AppBundle/Resources/views/layout.html.twig
@@ -2,5 +2,7 @@
 
 
 {% block index %}
-    {{ block('fos_user_content') }}
+    <div class="well">
+        {{ block('fos_user_content') }}
+    </div>
 {% endblock %}
