--- a/src/AppBundle/Resources/views/Balance/index.html.twig
+++ b/src/AppBundle/Resources/views/Balance/index.html.twig
@@ -1,7 +1,8 @@
 {% extends '@App/layoutBase.html.twig' %}
 
 {% block index %}
-
+    {% block left %}{% endblock %}
+    {% block right %}{% endblock %}
     <a href="#"><button class="btn btn-primary" type="button" data-toggle="modal" data-target="#addFunds">Add funds</button></a>
     <div class="modal fade" id="addFunds">
         <div class="modal-dialog">
