--- a/src/AppBundle/Resources/views/Profile/show.html.twig
+++ b/src/AppBundle/Resources/views/Profile/show.html.twig
@@ -1,5 +1,8 @@
 {% extends "FOSUserBundle::layout.html.twig" %}
 
 {% block fos_user_content %}
+    {% block left %}{% endblock %}
+    {% block right %}{% endblock %}
+    {% block footer %}{% endblock %}
 {% include "FOSUserBundle:Profile:show_content.html.twig" %}
 {% endblock fos_user_content %}
