--- a/src/AppBundle/Resources/views/Security/login.html.twig
+++ b/src/AppBundle/Resources/views/Security/login.html.twig
@@ -3,6 +3,8 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
 {% block fos_user_content %}
+    {% block left %}{% endblock %}
+    {% block right %}{% endblock %}
 {% if error %}
     <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
 {% endif %}
