--- a/src/AppBundle/Resources/views/footer.html.twig
+++ b/src/AppBundle/Resources/views/footer.html.twig
@@ -19,7 +19,7 @@
                     <a>Can't place a bet?</a>
                 </div>
                 <div class="col-xs-2" >
-                    <a href="http://dota2.gamepedia.com/Dota_2"><p>Dota 2</p></a>
+                    <a href="http://dota2.gamepedia.com/Dota_2">Dota 2</a>
                 </div>
                 <div class="col-xs-2">
                     <a>Terms and conditions</a>
@@ -32,7 +32,7 @@
                     <a>Can't redraw money?</a>
                 </div>
                 <div class="col-xs-2">
-                    <a href="http://counterstrike.wikia.com/wiki/Counter-Strike:_Global_Offensive"><p>CS GO</p></a>
+                    <a href="http://counterstrike.wikia.com/wiki/Counter-Strike:_Global_Offensive">CS GO</a>
                 </div>
                 <div class="col-xs-2">
                     <a>Contact us</a>
