--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -1,29 +1,32 @@
 <div id="ebet-top">
-    <div class="row">
-        <div id="loginbar" class="col-xs-12">
+    <div id="loginbar">
+        <div class="row">
             <div class="col-xs-7"></div>
-            <div id="login" class="col-xs-3">
-                <div class="col-xs-5"></div>
-                {% if is_granted("ROLE_USER") %}
-                <div class="col-xs-2" id="Profile">
-                    <button id="button1" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="true">Profile<span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                        <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
-                        <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
-                    </ul>
-                </div>
-                {% else %}
-                        <div class="col-xs-2" id="LCU">
-                            <a id="topbar" href="{{ path('fos_user_security_login') }}">Login</a>
+                <div id="login" class="col-xs-3">
+                    <div class="col-xs-5"></div>
+                    {% if is_granted("ROLE_USER") %}
+                        <div class="col-xs-3">
+                            <p>{{ user.balance }} <span class="glyphicon glyphicon-euro"></span></p>
                         </div>
-                        <div class="col-xs-3" id="LCU1">
-                            <a id="topbar" href="{{ path('fos_user_registration_register') }}">Create user</a>
+                        <div class="col-xs-2" id="Profile">
+                            <button id="button1" class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"
+                                    aria-haspopup="true" aria-expanded="true">Profile<span class="caret"></span>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                                <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
+                                <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
+                            </ul>
                         </div>
-                {% endif %}
+                    {% else %}
+                            <div class="col-xs-2">
+                                <a id="topbar" href="{{ path('fos_user_security_login') }}">Login</a>
+                            </div>
+                            <div class="col-xs-3">
+                                <a id="topbar" href="{{ path('fos_user_registration_register') }}">Create user</a>
+                            </div>
+                    {% endif %}
 
-                <div class="col-xs-2"></div>
+                    <div class="col-xs-2"></div>
             </div>
         </div>
     </div>
