--- a/src/AppBundle/Resources/views/top.html.twig
+++ b/src/AppBundle/Resources/views/top.html.twig
@@ -14,6 +14,7 @@
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
                                 <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
+                                <li><a href="{{ path('show-balance') }}">Balance</a></li>
                                 <li><a href="{{ path('fos_user_security_logout') }}">Logout</a></li>
                             </ul>
                         </div>
