--- a/src/AppBundle/Resources/views/Admin/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/Admin/layoutBase.html.twig
@@ -4,7 +4,7 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <a href="{{ path('admin-index') }}"><h1>eBet</h1></a>
+            <a href="{{ path('index') }}"><img class="logos" alt="eBetLogo" src="{{ asset('bundles/app/img/logo-ebet.png') }}"/></a>
         </div>
     </div>
 
