--- a/src/AppBundle/Resources/views/Balance/index.html.twig
+++ b/src/AppBundle/Resources/views/Balance/index.html.twig
@@ -59,7 +59,7 @@
                                 </div>
                                 <div class="form-group">
                                     <div class="col-sm-12">
-                                        <button type="submit" class="btn-success pull-right btn">Submit</button>{gt
+                                        <button type="submit" class="btn-success pull-right btn">Submit</button>
                                     </div>
                                 </div>
                             </form>
