changes to new links

--- a/src/AppBundle/Resources/public/css/style.css
+++ b/src/AppBundle/Resources/public/css/style.css
@@ -88,5 +88,13 @@ thead > tr:nth-child(1) > th:nth-child(1) {
 #Footerright {
     text-align: left;
 }
+.menu {
+    margin-left: 250px;
+    margin-right: 250px;
+}
+
+#logo-admin {
+    margin-left: 180px;
+}
 
 
