--- a/src/AppBundle/Resources/views/Admin/layoutBase.html.twig
+++ b/src/AppBundle/Resources/views/Admin/layoutBase.html.twig
@@ -4,13 +4,11 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <a href="{{ path('index') }}"><img class="logos" alt="eBetLogo" src="{{ asset('bundles/app/img/logo-ebet.png') }}"/></a>
+            <a id="logo-admin" href="{{ path('index') }}"><img src="{{ asset('bundles/app/img/logo-ebetwhite.png') }}"/></a>
         </div>
     </div>
 
     {% block body_inner %}
-        <div class="container">
             {% block content %}{% endblock content %}
-        </div>
     {% endblock body_inner %}
 {% endblock body %}
