--- a/src/AppBundle/Resources/views/left.html.twig
+++ b/src/AppBundle/Resources/views/left.html.twig
@@ -1,21 +1,21 @@
 <div class="left">
     <div id="sidebar" class="row">
         <div class="col-lg-12 col-md-12">
-            <a href="{{ path('dota2') }}">
+            <a href="{{ path('csgo') }}">
                 <img class="ebet-nav" src="{{ asset('bundles/app/img/csgologo.png')}}">
             </a>
         </div>
     </div>
     <div id="sidebar1" class="row">
         <div class="col-lg-12 col-md-12">
-            <a href="{{ path('csgo') }}">
+            <a href="{{ path('dota2') }}">
                 <img class="ebet-nav" src="{{ asset('bundles/app/img/dotalogo.png')}}">
             </a>
         </div>
     </div>
     <div id="sidebar1" class="row">
         <div class="col-lg-12 col-md-12">
-            <a href="{{ path('fos_user_security_login') }}">
+            <a href="{{ path('hearthstone') }}">
                 <img class="ebet-nav" src="{{ asset('bundles/app/img/hearthstone.PNG')}}">
             </a>
         </div>
