--- a/src/AppBundle/Resources/views/Index/showMatches.html.twig
+++ b/src/AppBundle/Resources/views/Index/showMatches.html.twig
@@ -3,6 +3,13 @@
 
 {% block index %}
 
+    {% for flashMessage in app.session.flashbag.get('notice') %}
+        <div class="alert alert-dismissible alert-success">
+            <button type="button" class="close" data-dismiss="alert">×</button>
+            <strong>Error:</strong> {{ flashMessage }}
+        </div>
+    {% endfor %}
+
     <div class="well">
         <table class="table table-bordered" id="index">
             <thead>
